[tool.poetry]
name = "softwarebude"
version = "0.1.0"
description = "Ein text-basiertes Spiel für die Konsole, das schrittweise weiterentwickelt werden soll."
authors = ["Benjamin Rupp <github@benjaminrupp.de>"]

[tool.poetry.dependencies]
python = "^3.7"
pyfiglet = "^0.8.post1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pre-commit = "^2.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
